# algolab

./: .gitignore  README.md  pyproject.toml  script.py
src/algolab/: bts_graph.py  graph.py  graph_bfs.py  graph_dfs.py  grapth_dijkstra.py  hash_table.py  linked_list.py  search.py  sorting.py  topological.py
tests/: test_search.py  test_sorting.py
