[project]
name = "algolab"
version = "0.1.0"
description = "Algorithms and data structures implementations for learning"
authors = [
    { name = "Rostyslav Voloshyn" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"